# hust

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
crates/core/: args.rs  assets.rs  cli.rs  config.rs  database.rs  file.rs  main.rs  notification.rs
crates/database/: Cargo.toml
crates/database/src/: domain.rs  file.rs  invalid.rs  invalids.rs  ip.rs  lib.rs
src/: args.rs  database.rs  main.rs  notification.rs  utils.rs
tests/: first.rs
