[package]
name = "hust"
version = "0.0.4"
edition = "2021"


[workspace]


[dependencies]
tikv-jemallocator = "0.5.0"
clap = { version = "*", features = [
    "derive",
    "suggestions",
    "color",
    "wrap_help",
] }
cidr-utils = "*"
addr = "*"
openssl = { version = "*", features = ["vendored"] }
reqwest = { version = "*", features = ["blocking", "json"] }
chrono = "*"
rayon = "*"
rust_search = "2.0.0"
memchr = "*"
memmap2 = "*"
lexopt = "*"


[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "benchmark"
harness = false

[[test]]
name = "first"
path = "tests/first.rs"

[[bin]]
bench = false
path = "crates/core/main.rs"
name = "hust"
