[package]
name = "hust"
version = "0.0.5"
edition = "2021"


[workspace]


[dependencies]
tikv-jemallocator = "*"
cidr-utils = "*"
reqwest = { version = "*", features = ["default-tls", "blocking", "json"] }
chrono = "*"
rayon = "*"
memchr = "*"
memmap2 = "*"
lexopt = "*"
itertools = "*"
fancy-regex = "*"


[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "benchmark"
harness = false

[[test]]
name = "first"
path = "tests/first.rs"


[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"
